# BidirectionalRegexInference

Benchmarks Results/: compare_type1.csv  run_batch_small.bat  run_batch_type1.bat  run_batch_type2.bat  run_compare.bat  type1.csv
Benchmarks/type2-small/: type2-small_exp1.txt  type2-small_exp10.txt  type2-small_exp100.txt  type2-small_exp101.txt  type2-small_exp102.txt  type2-small_exp103.txt  type2-small_exp104.txt  type2-small_exp105.txt  type2-small_exp106.txt  type2-small_exp107.txt  type2-small_exp108.txt  type2-small_exp109.txt  type2-small_exp11.txt  type2-small_exp110.txt  type2-small_exp111.txt  type2-small_exp112.txt  type2-small_exp113.txt  type2-small_exp114.txt  type2-small_exp115.txt  type2-small_exp116.txt  type2-small_exp117.txt  type2-small_exp118.txt  type2-small_exp119.txt  type2-small_exp12.txt  type2-small_exp120.txt  type2-small_exp121.txt  type2-small_exp122.txt  type2-small_exp123.txt  type2-small_exp124.txt  type2-small_exp125.txt  type2-small_exp126.txt  type2-small_exp127.txt  type2-small_exp128.txt  type2-small_exp129.txt  type2-small_exp13.txt  type2-small_exp130.txt  type2-small_exp131.txt  type2-small_exp132.txt  type2-small_exp133.txt  type2-small_exp134.txt  (+165 more)
BidirectionalRegexInference/: CMakeLists.txt
BidirectionalRegexInference/include/: bitmask.h  bottom_up.hpp  cs_utils.h  guide_table.h  guide_table.hpp  level_partitioner.h  level_partitioner.hpp  operations.h  pair.h  regex_match.hpp  rei.hpp  rei_common.hpp  top_down.hpp  types.h  util.hpp
BidirectionalRegexInference/src/: bottom_up.cpp  guide_table.cpp  level_partitioner.cpp  main.cpp  oldmain.cpp  operations.cpp  rei.cpp  rei_common.cpp  top_down.cpp  util.cpp
scripts/: compare.py  compare_type2.csv  run_batch.py  run_batch_small.bat  run_compare.bat  type2.csv
scripts/original/: type1.csv  type2.csv
